--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,11 +35,11 @@ jobs:
 #      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
       # SonarQube
-#    - name : Run SonarQube
-#      run : mvn sonar:sonar -Dsonar.projectKey=github-action -Dsonar.host.url=${{secrets.SONAR_HOST}} -Dsonar.login=${{secrets.SONAR_TOKEN}}
+    - name : Run SonarQube
+      run : mvn sonar:sonar -D"sonar.projectKey=gitaction_practice" -D"sonar.host.url=${{secrets.SONAR_HOST}}" -D"sonar.login=${{secrets.SONAR_TOKEN}}"
 #
     - name: upload file
-      uses: appleboy/scp-action@v0.1.7
+      uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.SSH_IP }}
         username: ${{ secrets.SSH_ID }}
@@ -50,7 +50,7 @@ jobs:
         rm: false
 
     - name: execute shell script
-      uses: appleboy/ssh-action@v0.1.7
+      uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SSH_IP }}
         username: ${{ secrets.SSH_ID }}
